# graphisoft_racer

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  car.cpp  car.h  driving.cpp  driving.h  main.cpp  map.cpp  map.h  test.h  vector.cpp
maps/: doughnut.map  ellipse.map  empty.map  obstacle.map
src/: car.cpp  car.h  main.cpp  map.cpp  map.h  vector.cpp  vector.h
src/game/: car.cpp  car.h  driving.cpp  driving.h  map.cpp  map.h  race.cpp  race.h  vector.cpp  vector.h
src/genetic/: evolver.cpp  evolver.h
test/: test.h
